force-app/main/default/objects/Account/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <description>Type of Healthcare Organization facility.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Infusion Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>