force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <description>Tax Identification Number for Healthcare Organizations.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>