force-app/main/default/objects/Account/recordTypes/HCO.recordType-meta.xml
<RecordType>
    <fullName>HCO</fullName>
    <active>true</active>
    <description>Business Account record type for Healthcare Organizations such as hospitals, clinics, pharmacies, and infusion centers.</description>
    <label>HCO</label>
</RecordType>