force-app/main/default/objects/Account/recordTypes/HCP.recordType-meta.xml
<RecordType>
    <fullName>HCP</fullName>
    <active>true</active>
    <description>Person Account record type for Healthcare Providers such as prescribers and referring physicians.</description>
    <label>HCP</label>
</RecordType>